# QGenericValidator

./: README.md
QGenericValidator/: CMakeLists.txt  ProjectDocument.md  ValidationResult.h  ValidatorTraits.h  main.cpp  mainwindowpanel.cpp  mainwindowpanel.h  mainwindowpanel.ui  validationManager.cpp  validationManager.h
